--- a/res/layout/newstab.xml
+++ b/res/layout/newstab.xml
@@ -7,13 +7,9 @@
         android:id="@+id/club"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Club" />
-    <Button
-        android:id="@+id/planet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Planet" />
-    <Button
+        android:text="Club" android:clickable="true" android:cursorVisible="false" android:hapticFeedbackEnabled="true" android:focusableInTouchMode="false" android:focusable="true"/>
+    
+    <Button android:id="@+id/planet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Planet" /><Button
         android:id="@+id/twitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
