--- a/res/layout/status.xml
+++ b/res/layout/status.xml
@@ -4,5 +4,5 @@
 	android:id="@+id/LinearLayout01"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:background="@drawable/led_aus">
+	android:background="@drawable/status_led_off">
 </LinearLayout>
