--- a/res/layout/newstab.xml
+++ b/res/layout/newstab.xml
@@ -2,16 +2,30 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
-  android:layout_height="wrap_content">
+  android:layout_height="fill_parent"
+  android:layout_gravity="center_horizontal">
     <Button
         android:id="@+id/club"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Club" android:clickable="true" android:cursorVisible="false" android:hapticFeedbackEnabled="true" android:focusableInTouchMode="false" android:focusable="true"/>
+        android:text="Club" 
+        android:clickable="true" 
+        android:cursorVisible="false" 
+        android:hapticFeedbackEnabled="true" 
+        android:focusableInTouchMode="false" 
+        android:focusable="true"
+        android:layout_gravity="center_vertical" />
     
-    <Button android:id="@+id/planet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Planet" /><Button
+    <Button 
+    	android:id="@+id/planet" 
+    	android:layout_width="wrap_content" 
+    	android:layout_height="wrap_content" 
+    	android:text="Planet"
+    	android:layout_gravity="center_vertical" />
+    <Button
         android:id="@+id/twitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Twitter" />
+        android:text="Twitter"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
