--- a/res/layout/status.xml
+++ b/res/layout/status.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+<RelativeLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/LinearLayout01"
+	android:id="@+id/StatusLayout"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:background="@drawable/status_led_off">
-</LinearLayout>
+	android:background="@drawable/status_on">
+	<ImageView
+	android:id="@+id/StatusLogo"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_gravity="center|center_horizontal"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
+    android:src="@drawable/status_led_off" />
+</RelativeLayout>
