--- a/res/layout/navi.xml
+++ b/res/layout/navi.xml
@@ -11,6 +11,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:clickable="true"
-                android:apiKey="00z-HkFucADIkng6B0UHb3Gkzn2Q3rTvWFKEaLw"
+                android:apiKey="00z-HkFucADJVrpSM0LMAklfYucQTum4LrXsyoQ"
+                />
+                <!-- First key is for debugging, second is for production. Change before publishing.
+
+                android:apiKey="00z-HkFucADIkng6B0UHb3Gkzn2Q3rTvWFKEaLw" -->
+               
+                
                 />
 </RelativeLayout>
